--- a/app/src/main/res/layout/activity_fare.xml
+++ b/app/src/main/res/layout/activity_fare.xml
@@ -1,9 +1,8 @@
-<LinearLayout
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,6 +11,18 @@
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="#4682B4"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        />
+    <TextView
+        android:id="@+id/frm_to_to_stn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NORMAL BOOKING"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
@@ -36,6 +47,7 @@
         android:elevation="10dp">
 
         <EditText
+            android:id="@+id/adult_passengers"
             android:layout_width="302dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp" />
@@ -50,6 +62,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
     <EditText
+        android:id="@+id/child_passengers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"/>
@@ -62,22 +75,12 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
-    <EditText
+    <Spinner
+        android:id="@+id/ticket_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Train Type"
-        android:textStyle="bold"
-        android:textColor="#4682B4"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:entries="@array/ticket_type"
+        tools:listitem="@layout/support_simple_spinner_dropdown_item"
         android:layout_marginTop="5dp"/>
     <TextView
         android:layout_width="match_parent"
@@ -88,11 +91,15 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
-    <EditText
+    <Spinner
+        android:id="@+id/ticket_class"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:entries="@array/ticket_class"
+        tools:listitem="@layout/support_simple_spinner_dropdown_item"
         android:layout_marginTop="5dp"/>
     <Button
+        android:id="@+id/submit_journey"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ok"
