--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -1,6 +1,7 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -32,11 +33,14 @@
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="10dp">
 
-        <EditText
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/sp_from_stn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="50dp"
             android:hint="Source Station Name/Code"
+            tools:listitem="@android:layout/simple_list_item_1"
+            android:entries="@array/stations"
             android:textAlignment="center"/>
     </androidx.cardview.widget.CardView>
 
@@ -59,11 +63,14 @@
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="10dp">
 
-        <EditText
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/sp_to_stn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="50dp"
             android:hint="Distination Station Name/Code"
+            tools:listitem="@android:layout/simple_list_item_1"
+            android:entries="@array/stations"
             android:textAlignment="center"/>
     </androidx.cardview.widget.CardView>
 
@@ -77,13 +84,13 @@
         android:background="#4682B4"
         android:elevation="10dp">
 
-        <Button
-            android:id="@+id/btn_submit_otp"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_submit_journey"
             android:layout_width="188dp"
             android:layout_height="wrap_content"
             android:background="#4682B4"
             android:text="DONE"
             android:textAlignment="center"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
