--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -56,7 +56,7 @@
                 app:cardCornerRadius="10dp">
 
                 <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/sp_from_stn"
+                    android:id="@+id/frm_to_to_stn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:entries="@array/stations"
