--- a/app/src/main/res/layout/activity_fare.xml
+++ b/app/src/main/res/layout/activity_fare.xml
@@ -1,169 +1,127 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/screen_background_light_transparent"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/frm_to_to_stn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="24dp"
+            android:padding="4dp"
+            android:text="NORMAL BOOKING"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="@android:drawable/screen_background_light_transparent"
-                android:orientation="vertical"
-                android:padding="4dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="4dp"
+            android:text="Adult"
+            android:textAllCaps="true"
+            android:textColor="#4682B4"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="16dp"
-                    android:padding="4dp"
-                    android:text="NORMAL BOOKING"
-                    android:textAlignment="center"
-                    android:textColor="#4682B4"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:typeface="serif" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="8dp"
-                    android:padding="2dp"
-                    android:text="Adult"
-                    android:textAllCaps="true"
-                    android:textColor="#4682B4"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:typeface="serif" />
 
         <EditText
+            android:id="@+id/adult_passengers"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:background="@drawable/edittext_bg"
-            android:paddingLeft="2dp" />
+            android:padding="4dp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="4dp"
+            android:text="Child"
+            android:textAllCaps="true"
+            android:textColor="#4682B4"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="8dp"
-                    android:padding="2dp"
-                    android:text="Child"
-                    android:textAllCaps="true"
-                    android:textColor="#4682B4"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:typeface="serif" />
+        <EditText
+            android:id="@+id/child_passengers"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/edittext_bg"
+            android:padding="4dp" />
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/edittext_bg"
-                    android:paddingLeft="2dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="4dp"
+            android:text="Ticket Type"
+            android:textAllCaps="true"
+            android:textColor="#4682B4"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="8dp"
-                    android:padding="2dp"
-                    android:text="Ticket Type"
-                    android:textAllCaps="true"
-                    android:textColor="#4682B4"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:typeface="serif" />
+        <Spinner
+            android:id="@+id/ticket_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/ticket_type"
+            android:padding="2dp"
+            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/edittext_bg"
-                    android:paddingLeft="2dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="4dp"
+            android:text="Class"
+            android:textAllCaps="true"
+            android:textColor="#4682B4"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="8dp"
-                    android:padding="2dp"
-                    android:text="Train Type"
-                    android:textAllCaps="true"
-                    android:textColor="#4682B4"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:typeface="serif" />
+        <Spinner
+            android:id="@+id/ticket_class"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/ticket_class"
+            android:padding="2dp"
+            tools:listitem="@layout/support_simple_spinner_dropdown_item" />
+    </LinearLayout>
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/edittext_bg"
-                    android:paddingLeft="2dp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="8dp"
-                    android:padding="2dp"
-                    android:text="Class"
-                    android:textAllCaps="true"
-                    android:textColor="#4682B4"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:typeface="serif" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/edittext_bg"
-                    android:paddingLeft="2dp" />
-            </LinearLayout>
-
-            <Button
-        android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="32dp"
+    <Button
+        android:id="@+id/submit_journey"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_margin="24dp"
         android:background="#4582B4"
-                android:padding="8dp"
-                android:text="submit"
+        android:padding="8dp"
+        android:text="submit"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-                android:textStyle="bold"
-                android:typeface="sans" />
-        </LinearLayout>
-
-    </ScrollView>
+        android:textStyle="bold"
+        android:typeface="serif" />
 
 </LinearLayout>
