--- a/app/src/main/res/layout/activity_bookingtype.xml
+++ b/app/src/main/res/layout/activity_bookingtype.xml
@@ -2,7 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/background"
+    android:padding="24dp"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,7 +15,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@android:drawable/screen_background_light_transparent"
+            android:padding="8dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_normal_book"
